<?xml version="1.0"?>
<package>
  <name>rosbag_to_csv</name>
  <version>0.0.0</version>
  <description>The rosbag_to_csv package</description>

  <maintainer email="atsushi@todo.todo">atsushi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pyqt4-dev-tools</run_depend>
</package>
