<?xml version="1.0"?>
<package format="3">
  <name>rosbag_to_csv</name>
  <version>0.0.0</version>
  <description>The rosbag_to_csv package</description>

  <maintainer email="atsushi@todo.todo">atsushi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pyqt5-dev-tools</exec_depend>
</package>
